@@ -2342,61 +2342,62 @@
 #define NAME_window (&builtin_names[2341])
 #define NAME_windowDecorator (&builtin_names[2342])
 #define NAME_windowManager (&builtin_names[2343])
-#define NAME_windowSystem (&builtin_names[2344])
-#define NAME_windowSystemRevision (&builtin_names[2345])
-#define NAME_windowSystemVersion (&builtin_names[2346])
-#define NAME_windows (&builtin_names[2347])
-#define NAME_wing (&builtin_names[2348])
-#define NAME_wmDelete (&builtin_names[2349])
-#define NAME_wmProtocol (&builtin_names[2350])
-#define NAME_wmProtocols (&builtin_names[2351])
-#define NAME_wmProtocolsAttached (&builtin_names[2352])
-#define NAME_wmf (&builtin_names[2353])
-#define NAME_word (&builtin_names[2354])
-#define NAME_wordSeparator (&builtin_names[2355])
-#define NAME_workingDirectory (&builtin_names[2356])
-#define NAME_wouldBeCyclic (&builtin_names[2357])
-#define NAME_wrap (&builtin_names[2358])
-#define NAME_wrapFixedWidth (&builtin_names[2359])
-#define NAME_wrfd (&builtin_names[2360])
-#define NAME_write (&builtin_names[2361])
-#define NAME_writeAsFile (&builtin_names[2362])
-#define NAME_writeLn (&builtin_names[2363])
-#define NAME_wsRef (&builtin_names[2364])
-#define NAME_x (&builtin_names[2365])
-#define NAME_x11WheelMouse (&builtin_names[2366])
-#define NAME_xCaret (&builtin_names[2367])
-#define NAME_xError (&builtin_names[2368])
-#define NAME_xFrom (&builtin_names[2369])
-#define NAME_xMovedDisplay (&builtin_names[2370])
-#define NAME_xName (&builtin_names[2371])
-#define NAME_xOffset (&builtin_names[2372])
-#define NAME_xOpen (&builtin_names[2373])
-#define NAME_xPosition (&builtin_names[2374])
-#define NAME_xTo (&builtin_names[2375])
-#define NAME_xVar (&builtin_names[2376])
-#define NAME_xbm (&builtin_names[2377])
-#define NAME_xcpu (&builtin_names[2378])
-#define NAME_xf (&builtin_names[2379])
-#define NAME_xfsz (&builtin_names[2380])
-#define NAME_xfx (&builtin_names[2381])
-#define NAME_xfy (&builtin_names[2382])
-#define NAME_xmlString (&builtin_names[2383])
-#define NAME_xor (&builtin_names[2384])
-#define NAME_xpm (&builtin_names[2385])
-#define NAME_xref (&builtin_names[2386])
-#define NAME_xrefVar (&builtin_names[2387])
-#define NAME_y (&builtin_names[2388])
-#define NAME_yCaret (&builtin_names[2389])
-#define NAME_yFrom (&builtin_names[2390])
-#define NAME_yPosition (&builtin_names[2391])
-#define NAME_yTo (&builtin_names[2392])
-#define NAME_yVar (&builtin_names[2393])
-#define NAME_yank (&builtin_names[2394])
-#define NAME_year (&builtin_names[2395])
-#define NAME_yf (&builtin_names[2396])
-#define NAME_yfx (&builtin_names[2397])
-#define NAME_yfy (&builtin_names[2398])
-#define NAME_yref (&builtin_names[2399])
-#define NAME_yrefVar (&builtin_names[2400])
-#define NAME_zoom (&builtin_names[2401])
+#define NAME_windowOfLastEvent (&builtin_names[2344])
+#define NAME_windowSystem (&builtin_names[2345])
+#define NAME_windowSystemRevision (&builtin_names[2346])
+#define NAME_windowSystemVersion (&builtin_names[2347])
+#define NAME_windows (&builtin_names[2348])
+#define NAME_wing (&builtin_names[2349])
+#define NAME_wmDelete (&builtin_names[2350])
+#define NAME_wmProtocol (&builtin_names[2351])
+#define NAME_wmProtocols (&builtin_names[2352])
+#define NAME_wmProtocolsAttached (&builtin_names[2353])
+#define NAME_wmf (&builtin_names[2354])
+#define NAME_word (&builtin_names[2355])
+#define NAME_wordSeparator (&builtin_names[2356])
+#define NAME_workingDirectory (&builtin_names[2357])
+#define NAME_wouldBeCyclic (&builtin_names[2358])
+#define NAME_wrap (&builtin_names[2359])
+#define NAME_wrapFixedWidth (&builtin_names[2360])
+#define NAME_wrfd (&builtin_names[2361])
+#define NAME_write (&builtin_names[2362])
+#define NAME_writeAsFile (&builtin_names[2363])
+#define NAME_writeLn (&builtin_names[2364])
+#define NAME_wsRef (&builtin_names[2365])
+#define NAME_x (&builtin_names[2366])
+#define NAME_x11WheelMouse (&builtin_names[2367])
+#define NAME_xCaret (&builtin_names[2368])
+#define NAME_xError (&builtin_names[2369])
+#define NAME_xFrom (&builtin_names[2370])
+#define NAME_xMovedDisplay (&builtin_names[2371])
+#define NAME_xName (&builtin_names[2372])
+#define NAME_xOffset (&builtin_names[2373])
+#define NAME_xOpen (&builtin_names[2374])
+#define NAME_xPosition (&builtin_names[2375])
+#define NAME_xTo (&builtin_names[2376])
+#define NAME_xVar (&builtin_names[2377])
+#define NAME_xbm (&builtin_names[2378])
+#define NAME_xcpu (&builtin_names[2379])
+#define NAME_xf (&builtin_names[2380])
+#define NAME_xfsz (&builtin_names[2381])
+#define NAME_xfx (&builtin_names[2382])
+#define NAME_xfy (&builtin_names[2383])
+#define NAME_xmlString (&builtin_names[2384])
+#define NAME_xor (&builtin_names[2385])
+#define NAME_xpm (&builtin_names[2386])
+#define NAME_xref (&builtin_names[2387])
+#define NAME_xrefVar (&builtin_names[2388])
+#define NAME_y (&builtin_names[2389])
+#define NAME_yCaret (&builtin_names[2390])
+#define NAME_yFrom (&builtin_names[2391])
+#define NAME_yPosition (&builtin_names[2392])
+#define NAME_yTo (&builtin_names[2393])
+#define NAME_yVar (&builtin_names[2394])
+#define NAME_yank (&builtin_names[2395])
+#define NAME_year (&builtin_names[2396])
+#define NAME_yf (&builtin_names[2397])
+#define NAME_yfx (&builtin_names[2398])
+#define NAME_yfy (&builtin_names[2399])
+#define NAME_yref (&builtin_names[2400])
+#define NAME_yrefVar (&builtin_names[2401])
+#define NAME_zoom (&builtin_names[2402])
